Bug 410168  circular reference in timezone references